<resources>
    <string name="app_name">Guided Login App</string>
    <string name="txtLogin">Username</string>
    <string name="txtLoginHint">Enter Username</string>
    <string name="txtPasswordHint">Password</string>
    <string name="txtPassword">Password</string>
    <string name="txtButton">Login</string>
    <string name="errUsername">The username was incorrect</string>
    <string name="errPassword">The password was incorrect</string>
    <string name="successfulAttempt">Login!</string>

    <string name="hntFirstName">First Name</string>
    <string name="hntLastName">Last Name</string>
    <string name="hntPhoneNumber">Phone Number</string>
    <string name="hntDay">Day</string>
    <string name="hntYear">Year</string>
    <string name="hntMonth">Month</string>
    <string name="txtDateOfBirth">Date Of Birth</string>
    <string name="txtMonthOfBirth">Month</string>
    <string name="txtDayOfBirth">Day</string>
    <string name="txtYearOfBirth">Year</string>
    <string name="txtCertificate">Certificate</string>
    <string name="txtAssociates">Associates</string>
    <string-array name="arrMonths">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12sean</item>
    </string-array>
    <string-array name="arrCert">
        <item>Android</item>
        <item>IOS</item>
    </string-array>
    <string-array name="arrAAS">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>
    <string name="txtProgramCert"></string>
    <string name="txtProgramAAS"></string>
    <string name="txtBtnNext">Next</string>

    <string name="txtSelectYourClass">Select your class and time slot:</string>
    <string name="txtClassOption1">MAD-107: iOS I</string>
    <string name="rdOpt1">T/Th 12:00 PM-1:50 PM</string>
    <string name="rdOpt2">M/W 10:00 AM-11:50 AM</string>
    <string name="txtClassOption2">MAD-155: Android II</string>
    <string name="rdOpt3">T/Th 12:00 PM-1:50 PM</string>
    <string name="rdOpt4">T/Th 4:00 PM-5:50 PM</string>
    <string name="txtClassOption3">MAD-157: iOS II</string>
    <string name="rdOpt5">F 9:00 AM-12:50 PM</string>
    <string name="rdOpt6">M/W 12:00 PM-1:50 PM</string>
    <string name="rdOpt7">M/W 10:00 AM-11:50 AM</string>
    <string name="rdOpt8">F 9:00 AM-12:50 PM</string>
    <string name="btnTxtFinal">Next</string>

</resources>